[core] :recycle: Minor refactors to the validation API, mainly for convenience
Signed-off-by: palexdev <alessandro.parisi406@gmail.com>